--- a/WanAndroidApp/app/src/main/AndroidManifest.xml
+++ b/WanAndroidApp/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".view.WebActivity" />
+        <activity android:name=".view.ShowSystemItemActivity"/>
     </application>
 
 </manifest>
