2019/5/15:<feat,fix>:<adapter,bean,util,view>: 1.新增了登录相关的功能 2.新增了查看收藏列表的功能 3.新增了通往中国珂学院的链接 (完全是我觉得我的第一个app应该有珂朵莉的一点痕迹，作为对她特别的感谢和纪念) (这也是为什么这个应用的主题色是蓝色吧)
-------------------------------------我是分割线------------------------------
1.修复了在轮播图中央停下时有可能下次滑动时会触发刷新的bug

--- a/WanAndroidApp/app/src/main/AndroidManifest.xml
+++ b/WanAndroidApp/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
         <activity android:name=".view.ShowSystemItemActivity" />
         <activity android:name=".view.SearchActivity" />
         <activity android:name=".view.ShowResultActivity" />
-        <activity android:name=".view.AccountActivity"></activity>
+        <activity android:name=".view.AccountActivity" />
+        <activity android:name=".view.ShowCollectActivity"></activity>
     </application>
 
 </manifest>
