--- a/WanAndroidApp/app/src/main/AndroidManifest.xml
+++ b/WanAndroidApp/app/src/main/AndroidManifest.xml
@@ -3,7 +3,9 @@
     package="com.example.sorena.wanandroidapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <application
         android:name=".util.MyApplication"
         android:allowBackup="true"
