--- a/WanAndroidApp/app/src/main/AndroidManifest.xml
+++ b/WanAndroidApp/app/src/main/AndroidManifest.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.sorena.wanandroidapp">
+
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <application
+        android:name=".util.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:name=".util.MyApplication">
+        android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,7 +22,12 @@
             </intent-filter>
         </activity>
         <activity android:name=".view.WebActivity" />
-        <activity android:name=".view.ShowSystemItemActivity"/>
+        <activity android:name=".view.ShowSystemItemActivity" />
+        <activity android:name=".view.SearchActivity" />
+        <activity android:name=".view.ShowResultActivity" />
+        <activity android:name=".view.AccountActivity" />
+        <activity android:name=".view.ShowCollectActivity" />
+        <activity android:name=".view.SystemActivity"></activity>
     </application>
 
 </manifest>
